# airweather_etl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.txt  pyproject.toml  requirements.txt
INCOMING/: cuaca_harian_jakarta.csv  ispu_harian_jakarta.csv
scripts/: airweather-cron  db_ping.py  run_etl.py  run_monthly_range.sh  run_weekly_range.sh  schedule_runner.py
src/airweather_etl.egg-info/: PKG-INFO  SOURCES.txt
src/etl/: config.py  db.py  extract.py  load.py  logging_util.py  pipeline.py  transform.py  validators.py
src/etl/factories/: loader_factory.py
src/etl/pipeline/: airweather_pipeline.py  pearson_pipeline.py
src/etl/strategies/: file_loader_strategy.py
tests/: test_schedule.py  test_transform.py  test_validation.py
