[project]
name = "airweather-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46",
    "numpy>=1.24",
    "pandas>=2.0",
    "pymysql>=1.1",
    "pytest>=8.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["etl*"]
